--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,41 @@ header {
     display: none;
 }
 
+.first-section h2 {
+    text-transform: uppercase;
+    font-size: 32px;
+    line-height: 39px;
+    font-weight: 400;
+}
+
+.first-section h1 {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 58px;
+}
+
+.first-section p {
+    margin-top: 28px;
+    text-align: left;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.text-1 {
+    width: 50%;
+}
+
+.first-section {
+    margin-top: 73px;
+    font-family: 'Inter', sans-serif;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
 @media screen and (max-width: 1024px) {
     .banner-1-desktop {
         display: none;
