--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,10 @@ header {
     width: 100%;
 }
 
+body {
+    font-family: 'Inter', sans-serif;
+}
+
 .banner-1-desktop {
     width: 100%;
 }
@@ -50,18 +54,73 @@ header {
 
 .first-section {
     margin-top: 74px;
-    font-family: 'Inter', sans-serif;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
 } 
 
+.image-computer{
+    width: 18%;
+}
+
 .image-section {
     display: flex;
     justify-content: center;
     margin-top: 74px;
 }
+
+.section-cards {
+    justify-content: center;
+    align-items: center;
+    gap: 21px;
+    display: flex;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.image-card {
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.23);
+    max-width: 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 179px;
+}
+
+.image-card-image {
+    display: block;
+    margin-top: 36px;
+}
+
+.image-card-paragraph {
+    padding-top: 27px;
+    padding: 26px;
+    max-width: 300px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+@media screen and (max-width: 1024px) {
+    .section-cards {
+        display: flex;
+        flex-direction: column;
+        margin-top: 90px;
+    }
+    .image-card {
+        max-width: 84.54%;
+        margin-top: 0%;
+        padding-top: 35px;
+        padding-left: 26px;
+        padding-right: 26px;
+        padding-bottom: 27px;
+    }
+    .image-computer {
+        width: 57.73%;
+    }
+    }
 
 @media screen and (max-width: 1024px) {
     .banner-1-desktop {
@@ -76,8 +135,4 @@ header {
     .first-section p {
         text-align: center;
     }
-    .image-computer {
-        width: 57.73%;
-    }
 }
-
