--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,12 +87,26 @@ body {
     margin-top: 179px;
 }
 
+.image-card-image {
+    display: block;
+    margin-top: 36px;
+}
+
+.image-card-paragraph {
+    padding-top: 27px;
+    padding: 26px;
+    max-width: 300px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+
 .midle-card-section {
     display: flex;
     background: #E0E0E0;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-top: 80px;
-
+    justify-content: center;
     align-items: center;
     gap: 40px;
 }
@@ -104,17 +118,42 @@ body {
 
 .midle-card-div {
     display: flex;
-    align-items: center;
     gap: 40px;
-    max-width: 88.44%;
+    justify-content: center;
 }
 
-.image-card-image {
+.midle-card-section img {
+    flex-direction: row;
+    max-width: 50vmin;
+}
+
+.midle-card-section > img {
+    max-width: 50vmin;
+}
+
+.section-cards-second {
+    justify-content: center;
+    align-items: center;
+    gap: 21px;
+    display: flex;
+}
+
+.image-card-second {
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.23);
+    max-width: 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 179px;
+}
+
+.image-card-image-second {
     display: block;
     margin-top: 36px;
 }
 
-.image-card-paragraph {
+.image-card-paragraph-second {
     padding-top: 27px;
     padding: 26px;
     max-width: 300px;
@@ -167,6 +206,7 @@ body {
     }
 
     .midle-card-div {
+        padding: 0 20px;
         flex-direction: row-reverse;
         gap: 14px;
         justify-content: center;
