--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 header {
@@ -133,6 +132,7 @@ body {
 }
 
 .section-cards-second {
+    padding: 0 72px;
     justify-content: center;
     align-items: center;
     gap: 16px;
@@ -167,6 +167,33 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+}
+
+.text-2-section h2 {
+    font-family: 'inter';
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px;
+    text-align: center;
+}
+
+.text-2-section p {
+    font-family: 'inter';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+}
+
+.text-2 {
+    width: 28.65%;
+}
+
+.text-2-section {
+    margin-top: 118px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 1024px) {
