--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ body {
 
 .midle-card {
     position: relative;
-    top: 32px;
+    top: 62px;
 }
 
 .midle-card-div {
@@ -156,12 +156,11 @@ body {
 }
 
 .image-card-paragraph-second {
-    font-family: 'Inter';
     font-style: normal;
     color: #000000;
     padding-top: 14px;
     padding-bottom: 64px;
-    padding: 32px;
+    padding: 33px;
     max-width: 368px;
     text-align: center;
     font-weight: 400;
@@ -170,7 +169,6 @@ body {
 }
 
 .text-2-section h2 {
-    font-family: 'inter';
     font-weight: 600;
     font-size: 32px;
     line-height: 40px;
@@ -178,7 +176,6 @@ body {
 }
 
 .text-2-section p {
-    font-family: 'inter';
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -194,6 +191,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer-image {
+    width: 70.83%;
+}
+
+.footer-image-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-image-section {
+    margin-top: 50px;
 }
 
 @media screen and (max-width: 1024px) {
