--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,7 +78,7 @@ body {
 
 .image-card {
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.23);
-    max-width: 18%;
+    max-width: 19%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -87,14 +87,15 @@ body {
 }
 
 .image-card-image {
+    width: 20%;
     display: block;
-    margin-top: 36px;
+    margin-top: 10%;
 }
 
 .image-card-paragraph {
     padding-top: 27px;
-    padding: 26px;
-    max-width: 300px;
+    padding: 28px;
+    max-width: 90%;
     text-align: center;
     font-weight: 400;
     font-size: 16px;
@@ -123,21 +124,20 @@ body {
 
 .midle-card-section img {
     flex-direction: row;
-    max-width: 28.5vw;
+    max-width: 29.5vw;
+    min-width: 25vw;
 }
 
 .section-cards-second {
     padding: 0 72px;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     gap: 16px;
     display: flex;
 }
 
 .image-card-second {
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.23);
-    max-width: 432px;
-    min-height: 332px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -150,6 +150,7 @@ body {
 }
 
 .image-card-image-second {
+    width: 23.15%;
     display: block;
     margin-top: 36px;
 }
@@ -226,7 +227,7 @@ body {
 }
 
 .footer-paragraph {
-    width: 398px;
+    max-width: 39%;
     margin-top: 16px;
     margin-bottom: 38px;
     font-size: 10px;
@@ -302,6 +303,7 @@ body {
     }
 
     .section-cards-second {
+        align-items: center;
         display: flex;
         flex-direction: column;
         margin-top: 112px;
@@ -338,6 +340,7 @@ body {
     }
 
     .footer-paragraph {
+        width: 63.04%;
         max-width: 62.8%;
         text-align: center;
     }
@@ -359,5 +362,52 @@ body {
     .text-2-section {
         margin-top: 50px;
     }
+
+}
+
+@media screen and (min-width: 4000px) {
+    .first-section h2 {
+        font-size: 64px;
+        line-height: 78px;
+    }
+    
+    .first-section h1 {
+        font-size: 96px;
+        line-height: 116px;
+    }
+    
+    .first-section p {
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .image-card-paragraph {
+        padding-top: 10%;
+        padding-bottom: 10%;
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .image-card-paragraph-second {
+        font-size: 32px;
+        line-height: 48px;
+}
+
+    .text-2-section h2 {
+        font-size: 32px;
+        line-height: 40px;
+    }
+
+    .text-2-section p {
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .footer-paragraph {
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
+@media screen and (min-width: 2000px) {
 
 }
